# scrapper-service

./: Dockerfile  README.md  pyproject.toml  run.sh  scrapper.sh
ipor_scrapper/: docker-compose.yml  egzample_env  save_data.py
ipor_scrapper/configuration/properties/: config.py
ipor_scrapper/mathematics/: maths.py
ipor_scrapper/output/: stable_coin_DAI  stable_coin_USDC  stable_coin_USDT
ipor_scrapper/tests/migration/: asset_mapping.json  elasticsearch_preparing.py
ipor_scrapper/tests/test_mathematics/: test_math.py
scrapper/: .env  docker-compose.yml  dtos.py  egzample_env  loggers.py  main.py  save_data.py  scrapper_service.py
scrapper/configuration/properties/: configuration.yaml
scrapper/containers/kibana/: kibana.yml
scrapper/ethereum/: connection_manager.py
scrapper/output/: stable_coin_DAI  stable_coin_USDC  stable_coin_USDT
scrapper/tests/: test_scrapper_service.py
