[tool.poetry]
name = "ipor-scrapper"
version = "0.1.0"
description = ""
authors = ["Adrian Skawinski <adrian@ipor.io>"]

[tool.poetry.dependencies]
python = "3.9.10"
logger = "1.4"
loguru = "0.5.3"
pathlib = "1.0.1"
elasticsearch = "7.16.3"
web3 = "5.25.0"
env = "0.1.0"
python-dotenv = "0.19.2"
PyYAML = "5.4.1"
pyaml-env = "1.1.3"
testcontainers = "latest"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
assertpy = "1.1"
expects = "0.9.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
